--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -39,17 +39,18 @@
   
   .task{
     min-height: 250px;
-    width: 400px;
+    width: auto;
     background-color: #fff;
     border-radius: 5px; 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     background: linear-gradient(to right bottom,
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.3));
     padding: 20px 20px;
     margin-bottom: 100px;
+   
   }
   #template {
       display: none;
@@ -60,12 +61,13 @@
       color: #000;
       width: 70px;
       border: 0;
-      margin-top: 15px;
       border-radius: 5px;
       padding: 5px 10px;
       font-weight: 600;
       margin-bottom: 10px;
       cursor: pointer;
+      margin: 0 auto;
+      margin-top: 15px;
   } 
 
   #text {
@@ -78,8 +80,10 @@
       width: 250px;
       border-radius: 5px;
       border: 2px solid #458EF4;
-      margin-top: 20px;
+      
       padding: 8px 10px;
+      margin: 0 auto;
+      margin-top: 20px;
   }
   #text {
     border-radius: 5px;
@@ -91,6 +95,7 @@
       text-transform: uppercase;
       margin-top: 10px;
       font-size: 16px;
+      list-style: none;
   }
   
   .fa-check-square {
@@ -108,10 +113,9 @@
       margin-left: 10px;
       cursor: pointer;
   }
-  li {
-      list-style: none;
-  }
-
+  
   .titolo.strike {
       text-decoration: line-through;
   }
+  
+ 
