--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -5,13 +5,14 @@
     font-family: 'Poppins', sans-serif;
   }
   body{
+    height: 100vh;
     background: linear-gradient(to bottom right,
      rgba(0, 108, 250,0.6), 
      rgba(0, 218, 112,0.8));
   }
   
   /* HEADER */
-  .header{
+  .header {
     width: 100%;
     height: 100px;
     background: white;
@@ -23,7 +24,18 @@
     background: linear-gradient(to right bottom,
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.3));
-    
+  }
+  .header_task {
+    width: 100%;
+    height: 60px;
+    background: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 0px 4px 0px,
+    rgba(0, 0, 0, 0.08) 0px 8px 16px 0px;
+    background-color: #fff;
+    border-radius: 5px;
   }
   #root {
       display: flex;
@@ -33,8 +45,17 @@
       align-items: center;
   }
    
-   .logo{
+   .logo {
     margin-left: 20px;
+    margin-right: 20px;
+   }
+   .logo_task {
+    margin-left: 15px;
+    width: 15%;
+    margin-right: 15px;
+   }
+   .titolo_task {
+     font-size: 18px;
    }
   
   .task{
@@ -49,12 +70,8 @@
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.3));
     padding: 20px 20px;
-    margin-bottom: 100px;
-   
   }
-  #template {
-      display: none;
-  }
+  
   #add {
       text-align: center;
       background-color: #FFDA00;
