--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -9,26 +9,14 @@
     background: linear-gradient(to bottom right,
      rgba(0, 108, 250,0.6), 
      rgba(0, 218, 112,0.8));
+ 
   }
   
   /* HEADER */
-  .header {
-    width: 100%;
-    height: 100px;
-    background: white;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.04) 0px 0px 4px 0px,
-    rgba(0, 0, 0, 0.08) 0px 8px 16px 0px;
-    background: linear-gradient(to right bottom,
-    rgba(255, 255, 255, 0.7),
-    rgba(255, 255, 255, 0.3));
-  }
+  
   .header_task {
     width: 100%;
     height: 60px;
-    background: white;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -39,10 +27,14 @@
   }
   #root {
       display: flex;
-      height: calc(100vh - 100px);
+      height: 100vh;
       width: 100vw;
       justify-content: center;
       align-items: center;
+      background: linear-gradient(to bottom right,
+     rgba(0, 108, 250,0.6), 
+     rgba(0, 218, 112,0.8));
+     background-repeat: no-repeat;
   }
    
    .logo {
@@ -64,6 +56,7 @@
     background-color: #fff;
     border-radius: 5px; 
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: start;
     background: linear-gradient(to right bottom,
